# MAV

devel/: .catkin  .rosinstall  setup.sh
devel/lib/: libglog.la  libglog.so.0.0.0  libyaml-cpp0.5.so.0.5.3
logs/eigen_conversions/: build.make.007.log.stderr
logs/glog_catkin/: build.make.000.log.stderr  build.make.006.log.stderr
logs/hector_gazebo_thermal_camera/: build.cmake.000.log.stderr
logs/loop_fusion/: build.make.000.log.stderr  build.make.006.log.stderr
logs/mav_nonlinear_mpc/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/mav_trajectory_generation_ros/: build.make.000.log.stderr  build.make.006.log.stderr
logs/msf_core/: build.make.006.log.stderr
logs/msf_updates/: build.make.000.log.stderr
logs/mynteye_wrapper_d/: build.make.000.log.stderr
logs/nlopt/: build.make.000.log.stderr  build.make.006.log.stderr
logs/realsense2_camera/: build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.006.log.stderr
logs/vins/: build.make.000.log.stderr  build.make.006.log.stderr
logs/waypoint_navigator/: build.make.007.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.021.log.stderr  build.make.039.log.stderr  build.make.059.log.stderr  (+35 more)
src/: .rosinstall
src/waypoint_navigator/: CMakeLists.txt
src/waypoint_navigator/include/waypoint_navigator/: waypoint_navigator_node.h
src/waypoint_navigator/paths/: trajectory_exp_m100_rect_15m.yaml  trajectory_exp_m100_rect_1m.yaml  trajectory_exp_m100_rect_5m.yaml
src/waypoint_navigator/src/: waypoint_navigator_node.cpp
(+343 files in other folders)
